# AWSweepByTag

./: .gitignore  Makefile  README.md  delete_functions.py  delete_resource_map.py  get_and_order.py  get_other_ids.py  main.py  main_delete.py  pyproject.toml  text_formatting.py
src/awsweepbytag/: delete_functions.py  delete_resource_map.py  dep_checkers.py  get_and_order.py  get_other_ids.py  logger.py  main.py  main_delete.py  text_formatting.py
test-infra/: .gitignore  README.md  main.tf  terraform.tfvars  variables.tf
test-infra/modules/lambda/: main.tf  outputs.tf  variables.tf
test-infra/modules/vpc/: main.tf  variables.tf
tests/: conftest.py  test_delete_functions.py  test_delete_functions_ec2_service.py
tests/test_delete_functions/: test_ec2_service.py
