[tool.poetry]
name = "awsweepbytag"
version = "0.1.0"
description = "Tool for deleting AWS resources by common tag"
authors = ["KrisAff84 <krisaff@gmail.com>"]
readme = "README.md"
packages = [{ include = "awsweepbytag", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.37.33"
botocore = "1.37.33"
jmespath = "1.0.1"
python-dateutil = "2.9.0.post0"
s3transfer = "0.11.4"
six = "1.17.0"
urllib3 = "2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
boto3-stubs = "^1.37.34"
botocore-stubs = "^1.37.29"
ruff = "^0.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
